src/test/ui/macros/issue-30143.stderr
error: format argument must be a string literal
  --> $DIR/issue-30143.rs:14:14
   |
LL |     println!(0);
   |              ^
help: you might be missing a string literal to format with
   |
LL |     println!("{}", 0);
   |              ^^^^^

error: format argument must be a string literal
  --> $DIR/issue-30143.rs:16:15
   |
LL |     eprintln!('a');
   |               ^^^
help: you might be missing a string literal to format with
   |
LL |     eprintln!("{}", 'a');
   |               ^^^^^

error: format argument must be a string literal
  --> $DIR/issue-30143.rs:19:17
   |
LL |     writeln!(s, true).unwrap();
   |                 ^^^^
help: you might be missing a string literal to format with
   |
LL |     writeln!(s, "{}", true).unwrap();
   |                 ^^^^^

error: aborting due to 3 previous errors

